<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_complex_scene"
    tools:context=".ui.complex.ComplexFragment">

    <ImageView
        android:id="@+id/peppaImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/peppa"
        android:src="@drawable/peppa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/georgeImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/george"
        android:src="@drawable/george"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mummyImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/mummy_pig"
        android:src="@drawable/mummy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/daddyImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/daddy_pig"
        android:src="@drawable/daddy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>